force-app/main/default/objects/ssot__SuggestedAssessmentDefinition__dlm/fields/ssot__AssessmentDefinitionReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentDefinitionReferenceId__c</fullName>
    <label>Assessment Definition Reference</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentDefinitionReferenceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>