force-app/main/default/objects/ssot__SuggestedAssessmentDefinition__dlm/fields/ssot__AssessmentRefObjectName__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentRefObjectName__c</fullName>
    <label>Assessment Ref Object Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentRefObjectName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>