force-app/main/default/objects/ssot__SuggestedAssessmentDefinition__dlm/fields/ssot__rel_1720291038439_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291038439_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SuggestedAssessmentDefinition_Subjec_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>SuggestedAssessmentDefinition_Subjec_rel</relationshipLabel>
    <relationshipName>rel_1720291038439_end</relationshipName>
    <type>Lookup</type>
</CustomField>