force-app/main/default/objects/ssot__SuggestedAssessmentDefinition__dlm/fields/ssot__rel_1720291857975_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291857975_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SuggestedAssessmentDefinition_Assess_rel</label>
    <referenceTo>ssot__ExternalAssessmentDefinition__dlm</referenceTo>
    <relationshipLabel>SuggestedAssessmentDefinition_Assess_rel</relationshipLabel>
    <relationshipName>rel_1720291857975_end</relationshipName>
    <type>Lookup</type>
</CustomField>