force-app/main/default/objects/ssot__SuggestedAssessmentDefinition__dlm/fields/ssot__SubjectRefObjectName__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubjectRefObjectName__c</fullName>
    <label>Subject Ref Object Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubjectRefObjectName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>