force-app/main/default/objects/ssot__SuggestedAssessmentDefinition__dlm/fields/ssot__SuggestedAssessmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__SuggestedAssessmentStatus__c</fullName>
    <label>Suggested Assessment Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SuggestedAssessmentStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>